refactor routes to use req.params

--- a/src/views/success.hbs
+++ b/src/views/success.hbs
@@ -1,2 +1,2 @@
 <h1>Hooray!</h1>
-<p>You were successful in {{ action }} your {{ item }}</p>
+<p>You were successful in {{ action }}ing your {{ item }}</p>
