--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -7,10 +7,13 @@
 {{!--{{> header}} --}}
 
 <body>
-  <p>Hello world</p>
+{{> header }}
 
 {{{body}}}
 
+<footer>
+{{> footer }}
+</footer>
 </body>
 
 {{!--{{> footer}}--}}
