--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,1 +1,19 @@
 <h1>This is the main page</h1>
+
+<img src="./assets/fried.svg">
+
+
+<section class="main-menu__nav">
+  <a href="">Food</a>
+  <div class="food main-menu__nav-content">
+    <a href ="/dish-add">I have leftovers!</a>
+    <a href ="/dish-listings">I need food!</a>
+  </div>
+
+    <a href="">Community</a>
+    <div class="community main-menu__nav-content">
+      <a href ="/community-listings">Join a community</a>
+      <a href ="/community-add">Create a community</a>
+    </div>
+
+</section>
