populate each listing with data

--- a/src/views/listings.hbs
+++ b/src/views/listings.hbs
@@ -1,1 +1,9 @@
 <h1>{{titlecase item}} Listings</h1>
+
+<ul>
+    {{#each data}}
+    <li>
+        {{> card this}}
+    </li>
+    {{/each}}
+</ul>
