--- a/src/views/partials/card.hbs
+++ b/src/views/partials/card.hbs
@@ -3,7 +3,7 @@
         <img
             src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/delish-breakfast-burrito-horizontaljpg-1541624805.jpg?resize=980:*">
         <div class="card__info">
-            <h3 class="card__info__name"></h3>
+            <h3 class="card__info__name">{{name}}</h3>
             <p class="card__info__additional-info"></p>
             <p class="card__info__user"></p>
         </div>
@@ -13,6 +13,6 @@
             <button class="card__options__action"></button>
             <button class="card__options__more-info"></button>
         </div>
-        <p>This is a placeholder text for the teaser.</p>
+        <p>{{teaser}}</p>
     </div>
 </div>
