Change <a> main menu clickables to <button> tags

--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -3,17 +3,17 @@
 <img src="./assets/fried.svg">
 
 
-<section class="main-menu__nav">
-  <a href="">Food</a>
+<nav class="main-menu__nav">
+  <button>Food</button>
   <div class="food main-menu__nav-content">
     <a href ="/dish-add">I have leftovers!</a>
     <a href ="/dish-listings">I need food!</a>
   </div>
 
-    <a href="">Community</a>
+    <button>Community</button>
     <div class="community main-menu__nav-content">
       <a href ="/community-listings">Join a community</a>
       <a href ="/community-add">Create a community</a>
     </div>
 
-</section>
+</nav>
