Rename main menu content classname to 'main-menu__options

--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -3,15 +3,15 @@
 <img src="./assets/fried.svg">
 
 
-<nav class="main-menu__nav">
+<nav class="main-menu">
   <button>Food</button>
-  <div class="food main-menu__nav-content">
+  <div class="food main-menu__options">
     <a href ="/dish-add">I have leftovers!</a>
     <a href ="/dish-listings">I need food!</a>
   </div>
 
     <button>Community</button>
-    <div class="community main-menu__nav-content">
+    <div class="community main-menu__options">
       <a href ="/community-listings">Join a community</a>
       <a href ="/community-add">Create a community</a>
     </div>
