add item to partial

--- a/src/views/listings.hbs
+++ b/src/views/listings.hbs
@@ -3,7 +3,7 @@
 <ul>
     {{#each data}}
     <li>
-        {{> card this}}
+        {{> card info=this item=../item}}
     </li>
     {{/each}}
 </ul>
