--- a/src/views/partials/card.hbs
+++ b/src/views/partials/card.hbs
@@ -10,8 +10,8 @@
     </div>
     <div class="card__teaser">
         <div class="card__options">
-            <button class="card__options__action"></button>
-            <button class="card__options__more-info"></button>
+            <button class="card__options__action">{{item}}</button>
+            <button class="card__options__more-info">{{item}}</button>
         </div>
         <p>{{teaser}}</p>
     </div>
