set data as an empty array

--- a/src/views/listings.hbs
+++ b/src/views/listings.hbs
@@ -5,5 +5,7 @@
     <li>
         {{> card info=this item=../item}}
     </li>
+    {{else}}
+    <h3>Sorry, there seems to be nothing here.</h3>
     {{/each}}
 </ul>
