--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -1,1 +1,15 @@
 <h1>Create a {{ item }}</h1>
+
+<form>
+  <div class="img-placeholder">
+  </div>
+  <input type="file">
+  <label for="title">Name your {{ item }}<sup class="required-asterisk">*</sup></label>
+    <input type="text" name="title" id="title" required>
+
+    {{#if (item === 'dish')}}
+
+    <p>Hello</p>
+
+    {{/if}}
+</form>
