add route for post community and dish

--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -23,13 +23,13 @@
       <h3>Dietary information</h3>
 
       <label for="vegetarian">Vegetarian</label>
-      <input type="checkbox" name="vegetarian" id="vegetarian">
+      <input type="checkbox" name="vegetarian" value="off" id="vegetarian">
 
       <label for="vegan">Vegan</label>
       <input type="checkbox" name="vegan" id="vegan">
 
       <label for="gluten-free">Gluten Free</label>
-      <input type="checkbox" name="gluten-free" id="gluten-free">
+      <input type="checkbox" name="glutenFree" id="gluten-free">
 
       <label for="halal">Halal</label>
       <input type="checkbox" name="halal" id="halal">
