alter image source

--- a/src/views/partials/card.hbs
+++ b/src/views/partials/card.hbs
@@ -1,7 +1,6 @@
 <div class="card">
     <div class="card__image">
-        <img
-            src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/delish-breakfast-burrito-horizontaljpg-1541624805.jpg?resize=980:*">
+        <img src={{image}}>
         <div class="card__info">
             <h3 class="card__info__name">{{name}}</h3>
             <p class="card__info__additional-info"></p>
