--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -76,6 +76,9 @@
 
       {{else}}
 
+       <label for="imgUrl">Image URL<sup class="required-asterisk">*</sup></label>
+    <input type="text" name="imgUrl" id="imgUrl" required>
+    
       <label for="description">Describe your community</label>
       <textarea name="description" id="description" rows="5" required></textarea>
 
