set variables for fonts and colors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,4 @@
-.main-menu__nav-content {
-  border: 1px solid black;
+body {
+  background-color: #F8C154;
 }
+/*# sourceMappingURL=style.css.map */
