--- a/src/views/partials/head.hbs
+++ b/src/views/partials/head.hbs
@@ -1,6 +1,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link href="https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="./css/normalise.css">
 <link rel="stylesheet" href="./css/style.css">
 <meta name="apple-mobile-web-app-capable" content="yes">
