--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -3,6 +3,6 @@
 <h3 class="homepage-tagline"></h3>
 
 <div class="login-options">
-    <button class="login-options__login">Log In</button>
-    <button class="login-options__register">Register</button>
+    <button class="red-button login-options__login">Log In</button>
+    <button class="menu-link login-options__register">Register</button>
 </div>
