--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,54 @@
 body {
-  background-color: #F8C154;
+  background-color: #E5E5E5;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1em;
+  color: #16191D;
+}
+
+a {
+  text-decoration: none;
+}
+
+.header {
+  color: #AA0808;
+  font-family: "Abril Fatface", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 2.75em;
+}
+
+.homepage-logo {
+  height: 145px;
+  width: 145px;
+}
+
+.footer {
+  font-size: 0.875em;
+}
+
+.red-button {
+  background-color: #AA0808;
+  color: #E5E5E5;
+  border-radius: 5px;
+  text-transform: uppercase;
+  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  height: 40px;
+  width: 145px;
+  font-size: 1.125em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+}
+
+.menu-link {
+  color: #AA0808;
+  text-decoration: underline;
+  height: 40px;
+  width: 145px;
+  font-size: 1.125em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+}
+
+.login-options__register {
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=style.css.map */
