Add comments to style.scss

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -11,6 +11,8 @@ a {
     text-decoration: none;
 }
 
+// HOME and INFO pages - Anna
+
 .header {
     color: $default-red;
     font-family: $decorative-font;
@@ -37,3 +39,8 @@ a {
     text-transform: uppercase;
 
 }
+
+// DISH PAGE - Sam
+
+
+// CREATE COMMUNITY FORM PAGE - Bobby
