--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -5,4 +5,4 @@
         communities and reduce food wastage.</p>
 </div>
 
-<a href="/" class='return-button'>Return to the homepage</a>
+<a href="/" class='return-link'><i class="fas fa-arrow-left"></i>return to the homepage</a>
