--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,16 +1,13 @@
-<h1>This is the main page</h1>
-
-<img src="./assets/fried.svg">
-
+<img class="main-logo" src="./assets/fried.svg">
 
 <nav class="main-menu">
-  <button>Food</button>
+  <button class="red-button">Food</button>
   <div class="food main-menu__options">
     <a href="/dish-add" class="menu-link">I have leftovers!</a>
     <a href="/dish-listings" class="menu-link">I need food!</a>
   </div>
 
-  <button>Community</button>
+  <button class="red-button">Community</button>
   <div class="community main-menu__options">
     <a href="/community-listings" class="menu-link">Join a community</a>
     <a href="/community-add" class="menu-link">Create a community</a>
