--- a/src/views/main.hbs
+++ b/src/views/main.hbs
@@ -1,4 +1,6 @@
-<img class="main-logo" src="./assets/fried.svg">
+<div class="main-logo-container">
+  <img class="main-logo" src="./assets/fried.svg">
+</div>
 
 <nav class="main-menu">
   <button class="red-button">Food</button>
