--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #E5E5E5;
+  background-color: #f9fafb;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1em;
   color: #16191D;
@@ -26,11 +26,23 @@ a {
 
 .red-button {
   background-color: #AA0808;
-  color: #E5E5E5;
+  color: #f9fafb;
   border-radius: 5px;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  height: 40px;
+  width: 145px;
+  font-size: 1.125em;
+  font-weight: lighter;
+  letter-spacing: 1px;
+}
+
+.red-file-upload-button {
+  background-color: #AA0808;
+  color: #f9fafb;
+  border-radius: 5px;
+  text-transform: uppercase;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   height: 40px;
   width: 145px;
   font-size: 1.125em;
@@ -51,4 +63,11 @@ a {
 .login-options__register {
   text-transform: uppercase;
 }
-/*# sourceMappingURL=style.css.map */
+
+.create-header {
+  font-size: 2em;
+}
+
+.form-input-labels {
+  font-size: 1.125em;
+}
