--- a/src/views/add.hbs
+++ b/src/views/add.hbs
@@ -1,22 +1,22 @@
-<h1>Create a {{ item }}</h1>
+<h2 class ="create-header">Create a {{ item }}</h2>
 
 <form action="{{ item }}-add" method="post">
   <div class="img-placeholder">
   </div>
-  <input type="file">
+  <input type="file" class="red-file-upload-button">
 
-  <label for="imgUrl">Image URL<sup class="required-asterisk">*</sup></label>
+  <label for="imgUrl" class="form-input-labels">Image URL<sup class="required-asterisk">*</sup></label>
   <input type="text" name="imgUrl" id="imgUrl" required>
 
-  <label for="title">Name your {{ item }}<sup class="required-asterisk">*</sup></label>
+  <label for="title" class="form-input-labels">Name your {{ item }}<sup class="required-asterisk">*</sup></label>
   <input type="text" name="title" id="title" required>
 
   {{#if (compare item 'dish')}}
 
-  <label for="teaser">Write a one-liner about your dish<sup class="required-asterisk">*</sup></label>
+  <label for="teaser" class="form-input-labels">Write a one-liner about your dish<sup class="required-asterisk">*</sup></label>
   <input type="text" name="teaser" id="teaser" required>
 
-  <label for="spiciness">Spiciness</label>
+  <label for="spiciness" class="form-input-labels">Spiciness</label>
   <select name="spiciness" id="spiciness" required>
     <option value="0">Not spicy</option>
     <option value="1">Mild</option>
@@ -24,7 +24,7 @@
     <option value="3">Spicy</option>
   </select>
 
-  <h3>Dietary information</h3>
+  <h3 class="form-input-labels">Dietary information</h3>
 
   <label for="vegetarian">Vegetarian</label>
   <input type="checkbox" name="vegetarian" id="vegetarian" value=1>
@@ -41,9 +41,9 @@
   <label for="kosher">Kosher</label>
   <input type="checkbox" name="kosher" id="kosher" value="1">
 
-  <h3>Allergies</h3>
+  <h3 class="form-input-labels">Allergies</h3>
 
-  <p>Contains:</p>
+  <h3 class="form-input-labels">Contains:</h3>
   <label for="nuts">Nuts</label>
   <input type="checkbox" name="nuts" id="nuts" value="1">
 
@@ -53,7 +53,7 @@
   <label for="dairy">Dairy</label>
   <input type="checkbox" name="dairy" id="dairy" value="1">
 
-  <label for="servings">Servings</label>
+  <label for="servings" class="form-input-labels">Servings</label>
   <select name="servings" id="servings" required>
     <option value="1">One</option>
     <option value="2">Two</option>
@@ -62,16 +62,16 @@
     <option value="5">Five</option>
   </select>
 
-  <label for="cooked">Cooked</label>
+  <label for="cooked" class="form-input-labels">Cooked</label>
   <input type="date" name="cooked" id="cooked" value="" min="2019-01-01">
 
-  <label for="collection">Collection time</label>
+  <label for="collection" class="form-input-labels">Collection time</label>
   <input type="datetime-local" name="collection" id="collection" min="2019-01-01T00:00">
 
-  <label for="location">Collection location</label>
+  <label for="location" class="form-input-labels">Collection location</label>
   <input type="text" name="location" id="location" required>
 
-  <label for="additional">Additional Info</label>
+  <label for="additional" class="form-input-labels">Additional Info</label>
   <textarea name="additional" id="additional" rows="5" required></textarea>
 
   {{else}}
