--- a/src/views/partials/card.hbs
+++ b/src/views/partials/card.hbs
@@ -9,8 +9,12 @@
     </div>
     <div class="card__teaser">
         <div class="card__options">
-            <button class="card__options__action">{{item}}</button>
-            <button class="card__options__more-info">{{item}}</button>
+            <button class="card__options__action">{{item}}, </button>
+             {{#if (compare item 'dish')}}
+           <a href="/{{item}}/{{dishid}}" ><button class="card__options__more-info">More Info</button></a>
+             {{else}}
+            <a href="/{{item}}/{{communityid}}"><button class="card__options__more-info">More Info</button></a>  
+            {{/if}}
         </div>
         <p>{{teaser}}</p>
     </div>
