style layouts for home page

--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -30,6 +30,11 @@ $regular-size: 1em;
 $small-size: 0.875em;
 
 //spacing
+$tiny: 0.5em;
+$small: 1em;
+$base: 1.5em;
+$large: 3em;
+$x-large: 4em;
 
 //logo
 @mixin bigLogo {
