--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,6 +1,12 @@
-<a href="/about" class="homepage-info"><i class="fas fa-question-circle"></i>What is dish?</a>
-<img class="homepage-logo" src="./assets/fried.svg">
-<h3 class="homepage-tagline">list your food and share the love!</h3>
+<a href="/about" class="more-info">
+    <i class="fas fa-question-circle"></i>
+    <p>What is dish?</p>
+</a>
+
+<div class="homepage">
+    <img class="homepage__logo" src="./assets/fried.svg">
+    <h3 class="homepage__tagline">list your food and share the love!</h3>
+</div>
 
 <div class="login-options">
     <button class="red-button login-options__login">Log In</button>
