--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
 {{> head}}
 
 {{!--{{> header}} --}}
 
 <body>
-{{> header }}
+    <main>
 
-{{{body}}}
+        {{> header }}
 
-<footer>
-{{> footer }}
-</footer>
+        {{{body}}}
+    </main>
+    <footer>
+        {{> footer }}
+    </footer>
 </body>
 
 {{!--{{> footer}}--}}
