--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,17 +3,20 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   font-size: 1em;
   color: #16191D;
+  line-height: 1.3;
 }
 
 main {
+  height: 85vh;
   padding: 1.5em;
 }
 
 .footer {
-  position: -webkit-sticky;
-  position: sticky;
+  position: absolute;
+  bottom: 1.5em;
+  left: 1.5em;
   font-size: 0.875em;
-  margin: 0 1.5em 1.5em;
+  margin-top: 1.5em;
 }
 
 a {
@@ -25,12 +28,8 @@ button {
 }
 
 .more-info {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
+  justify-content: flex-end;
   color: #F8C154;
   font-size: 1.125em;
   cursor: pointer;
@@ -41,19 +40,10 @@ button {
 }
 
 .homepage {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .homepage__logo {
@@ -82,8 +72,7 @@ button {
   color: #F9FAFB;
   border-radius: 5px;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   height: 40px;
   width: 145px;
   font-size: 1.125em;
@@ -96,8 +85,7 @@ button {
   color: #F9FAFB;
   border-radius: 5px;
   text-transform: uppercase;
-  -webkit-box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   height: 40px;
   width: 145px;
   font-size: 1.125em;
@@ -118,19 +106,10 @@ button {
 }
 
 .login-options {
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex-direction: column;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-options__login {
@@ -152,26 +131,42 @@ button {
   width: 130px;
 }
 
+.about-dish__description {
+  padding-bottom: 1.5em;
+}
+
 .return-link {
   text-decoration: underline;
   color: #16191D;
 }
 
 .main-logo-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-logo-container .main-logo {
   height: 145px;
   width: 145px;
+}
+
+.about-dish__heading {
+  color: #16191D;
+  font-family: "Abril Fatface", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 1.5em;
+}
+
+.about-dish__intro {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-bottom: 1.5em;
+}
+
+.about-dish__logo {
+  height: 110px;
+  width: 110px;
 }
 
 .create-header {
@@ -181,4 +176,3 @@ button {
 .form-input-labels {
   font-size: 1.125em;
 }
-/*# sourceMappingURL=style.css.map */
