--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,6 +1,8 @@
 <div class='about-dish'>
+  <div class="about-dish__intro">
     <h3 class='about-dish__heading'>What is dish?</h3>
     <img class="about-dish__logo" src="./assets/fried.svg">
+  </div>
     <p class="about-dish__description">Dish is a platform where foodies can share their cooking with people in their
         communities and reduce food wastage.</p>
 </div>
