--- a/src/views/partials/card.hbs
+++ b/src/views/partials/card.hbs
@@ -9,11 +9,7 @@
     </div>
     <div class="card__teaser">
         <div class="card-options">
-            {{#if (compare item 'dish')}}
-            <a href="/{{item}}/{{dishid}}"><button class="card-options__more-info">More Info</button></a>
-            {{else}}
-            <a href="/{{item}}/{{communityid}}"><button class="card-options__more-info">More Info</button></a>
-            {{/if}}
+            <a class="card-options__more-info" href="/{{item}}-{{id}}">More Info</a>
         </div>
         <p>{{teaser}}</p>
     </div>
